--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="/favico.png" />
     <meta
-      name="description"
+      name="Perandus"
       content="Web site created using create-react-app"
     />
 
